@@ -25,6 +25,13 @@
   (test flv 'for/flvector flv1)
   (test flv 'for/flvector-fast flv2))
 
+(test (flvector 1.0 2.0 3.0 0.0 0.0)
+      'for/flvector-fill
+      (for/flvector #:length 5 ([i 3]) (+ i 1.0)))
+(test (flvector 1.0 2.0 3.0 -10.0 -10.0)
+      'for/flvector-fill
+      (for/flvector #:length 5 #:fill -10.0 ([i 3]) (+ i 1.0)))
+
 ;; for*/flvector test
 (let ((flv (flvector 0.0 0.0 0.0 0.0 1.0 2.0 0.0 2.0 4.0))
       (flv1 (for*/flvector ((i (in-range 3)) (j (in-range 3))) (exact->inexact (* 1.0 i j))))
